@@ -1,5 +1,9 @@
 1998-10-21  Rosanna Yuen  <rwsy@mit.edu>
 
+	* yukon.scm : added a new game 
+
+1998-10-21  Rosanna Yuen  <rwsy@mit.edu>
+
 	* eagle_wing.scm : added a new game
 
 1998-10-20  Rosanna Yuen  <rwsy@mit.edu>
